Fix the config file

--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -23,7 +23,7 @@
   "SearchConfig": {
     "UseAzureSearch": false,
     "ServiceName": "__YOURSERVICENAME__",
-    "ApiKey": "__YOURAPIKEY"__",
+    "ApiKey": "__YOURAPIKEY__",
     "Indexer": "__YOURINDEXER__",
     "Suggester": "__YOURSUGGESTER__"
   },
