Change default picture

--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
-  "DefaultUsername": "shawn",
-  "DefaultFullName": "Shawn Bice",
-  "DefaultEmail": "shawn@outlook.com",
+  "DefaultUsername": "andrew",
+  "DefaultFullName": "Andrew Davis",
+  "DefaultEmail": "andrew@outlook.com",
   "DefaultPassword": "P2ssw0rd@1",
   "Security": {
     "Authority": "http://localhost:11314/",
