--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -1,8 +1,8 @@
-﻿{
-  "DefaultUsername": "andrew",
-  "DefaultFullName": "Andrew Davis",
-  "DefaultEmail": "andrew@outlook.com",
-  "DefaultPassword": "P2ssw0rd@1",
+{
+  "DefaultUsername": "__WEBUSER__",
+  "DefaultFullName": "__WEBFULLNAME__",
+  "DefaultEmail": "adavid@outlook.com",
+  "DefaultPassword": "__WEBPASSWORD__",
   "Security": {
     "Authority": "http://localhost:11314/",
     "Audience": "http://localhost:11314/",
@@ -11,21 +11,27 @@
   },
   "Data": {
     "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=AdventureWorks.SkiResort;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "__SQLCONNECTIONSTRING__"
     },
     "IdentityConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=AdventureWorks.SkiResort;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "__IDENTITYCONNECTIONSTRING__"
+    },
+    "TelemetryStorage": {
+      "ConnectionString": "__STORAGECONNECTIONSTRING__"
+    },
+    "AnomalyDetection": {
+      "Key": "__ANOMALYDETECTIONKEY__"
     }
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "__YOURINSTRUMENTATIONKEY__"
+    "InstrumentationKey": "__YOUR_INSTRUMENTATION_KEY__"
   },
   "SearchConfig": {
-    "UseAzureSearch": false,
-    "ServiceName": "__YOURSERVICENAME__",
-    "ApiKey": "__YOURAPIKEY__",
-    "Indexer": "__YOURINDEXER__",
-    "Suggester": "__YOURSUGGESTER__"
+    "UseAzureSearch": true,
+    "ServiceName": "__SEARCHSERVICENAME__",
+    "ApiKey": "__SEARCHKEY__",
+    "Indexer": "restaurant",
+    "Suggester": "restaurant"
   },
   "Logging": {
     "IncludeScopes": false,
