--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DefaultUsername": "__WEBUSER__",
   "DefaultFullName": "__WEBFULLNAME__",
-  "DefaultEmail": "adavid@outlook.com",
+  "DefaultEmail": "adavis@outlook.com",
   "DefaultPassword": "__WEBPASSWORD__",
   "Security": {
     "Authority": "http://localhost:11314/",
@@ -9,19 +9,13 @@
     "ClientId": "SkyResort",
     "ClientSecret": "secret"
   },
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "__SQLCONNECTIONSTRING__"
-    },
-    "IdentityConnection": {
-      "ConnectionString": "__IDENTITYCONNECTIONSTRING__"
-    },
-    "TelemetryStorage": {
-      "ConnectionString": "__STORAGECONNECTIONSTRING__"
-    },
-    "AnomalyDetection": {
-      "Key": "__ANOMALYDETECTIONKEY__"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "__SQLCONNECTIONSTRING__",
+    "IdentityConnection": "__IDENTITYCONNECTIONSTRING__",
+    "TelemetryStorage": "__STORAGECONNECTIONSTRING__"
+  },
+  "AnomalyDetection": {
+    "Key": "__ANOMALYDETECTIONKEY__"
   },
   "ApplicationInsights": {
     "InstrumentationKey": "__YOUR_INSTRUMENTATION_KEY__"
