--- a/src/SkiResort.Infrastructure/project.json
+++ b/src/SkiResort.Infrastructure/project.json
@@ -1,35 +1,31 @@
-{
+﻿{
   "version": "1.0.0-*",
   "description": "Adventure Works Ski Resort",
   "authors": [ "Microsoft" ],
-  "compilationOptions": {
-    "warningsAsErrors": true
-  },
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
 
   "dependencies": {
-    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
-    "Microsoft.Extensions.OptionsModel": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.Abstractions": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0-rc1-final",
-    "WindowsAzure.Storage": "6.2.2-preview",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc1-final"
+    "NETStandard.Library": "1.6.0",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+    "Microsoft.Extensions.Configuration.Abstractions": "1.0.0",
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
+    "Microsoft.AspNetCore.Http.Extensions": "1.0.0",
+    "WindowsAzure.Storage": "7.0.2-preview",
+    "Microsoft.Extensions.PlatformAbstractions": "1.0.0"
   },
 
   "frameworks": {
-    "net451": { },
-    "dotnet5.4": {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.1-beta-23516",
-        "System.Collections": "4.0.11-beta-23516",
-        "System.Linq": "4.0.1-beta-23516",
-        "System.Runtime": "4.0.21-beta-23516",
-        "System.Threading": "4.0.11-beta-23516"
-      }
+    "netstandard1.6": {
+      "imports": [
+        "dnxcore50",
+        "portable-net451+win8"
+      ]
     }
+  },
+
+  "buildOptions": {
+    "warningsAsErrors": true
   }
 }
