update the webapp to use the core 1.0 version

--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -9,14 +9,12 @@
     "ClientId": "SkyResort",
     "ClientSecret": "secret"
   },
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=AdventureWorks.SkiResort;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
-    "IdentityConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=AdventureWorks.SkiResort;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AdventureWorks.SkiResort;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=AdventureWorks.SkiResort;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
   "ApplicationInsights": {
     "InstrumentationKey": "__YOURINSTRUMENTATIONKEY__"
   },
