--- a/src/SkiResort.Web/project.json
+++ b/src/SkiResort.Web/project.json
@@ -60,6 +60,7 @@
   },
 
   "scripts": {
+    "prepublish": [ "npm install", "gulp" ],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
 }
