--- a/src/SkiResort.Web/project.json
+++ b/src/SkiResort.Web/project.json
@@ -12,7 +12,7 @@
     "SkiResort.Infrastructure": "1.0.0-*",
     "Microsoft.EntityFrameworkCore": "1.0.0",
     "Microsoft.Extensions.Options": "1.0.0",
-    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
+    "AspNet.Security.OAuth.Validation": "1.0.0-alpha2-final",
     "AspNet.Security.OpenIdConnect.Server": "1.0.0-beta6-final",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
