--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.UWP/SkiResort.XamarinApp.UWP.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.UWP/SkiResort.XamarinApp.UWP.csproj
@@ -108,6 +108,11 @@
     <None Include="Windows_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="home_background.jpg" />
+    <Content Include="weatherWidget_base.png" />
+    <Content Include="weatherWidget_snow.png" />
+    <Content Include="weatherWidget_temp.png" />
+    <Content Include="weatherWidget_wind.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
