--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/project.json
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/project.json
@@ -2,6 +2,7 @@
   "supports": {},
   "dependencies": {
     "NETStandard.Library": "1.6.0",
+    "Newtonsoft.Json": "9.0.1",
     "Xamarin.Forms": "2.3.3.175"
   },
   "frameworks": {
