--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/project.json
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/project.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
+    "Xamarin.FFImageLoading.Forms": "2.2.5",
     "Xamarin.Forms": "2.3.3.175"
   },
   "frameworks": {
