--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
@@ -113,6 +113,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\liftStatus_diamond.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\reservation_list_bg.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
