--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -27,6 +27,10 @@
     "Indexer": "restaurant",
     "Suggester": "restaurant"
   },
+  "DocumentDB": {
+    "EndpointUri": "__DOCUMENTDBENDPOINT__",
+    "Key": "__DOCUMENTDBKEY__"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
