--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
@@ -39,13 +39,17 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\BoolToStringConverter.cs" />
     <Compile Include="Converters\DateTimeToHourConverter.cs" />
+    <Compile Include="Converters\DistanceToRestaurantConverter.cs" />
     <Compile Include="Converters\IntToInchesConverter.cs" />
     <Compile Include="Converters\IntToRentalIdConverter.cs" />
     <Compile Include="Converters\LiftRatingToIconSourceConverter.cs" />
     <Compile Include="Converters\DoubleToCurrencyConverter.cs" />
     <Compile Include="Converters\RentalToDateRangeConverter.cs" />
     <Compile Include="Converters\RentalToTypeAndLevelConverter.cs" />
+    <Compile Include="Converters\RestaurantToImageSourceConverter.cs" />
+    <Compile Include="Entities\Geolocation.cs" />
     <Compile Include="Entities\LiftGroup.cs" />
     <Compile Include="Entities\Lift.cs" />
     <Compile Include="Entities\Rental.cs" />
