--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/Properties/AndroidManifest.xml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="24" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<application android:label="SkiResort.XamarinApp.Droid"></application>
 </manifest>
