--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
@@ -39,6 +39,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Config.cs" />
     <Compile Include="Converters\BoolToStringConverter.cs" />
     <Compile Include="Converters\DateTimeToHourConverter.cs" />
     <Compile Include="Converters\DistanceToRestaurantConverter.cs" />
