--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
@@ -226,13 +226,25 @@
     <BundleResource Include="Resources\poles.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\star.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\star_filled.png" />
-  </ItemGroup>
-  <ItemGroup>
     <BundleResource Include="Resources\marker.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\star_5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\star_0.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\star_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\star_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\star_3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\star_4.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
