--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Pages\DiningPage.xaml.cs">
       <DependentUpon>DiningPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\LiftDetailPage.xaml.cs">
+      <DependentUpon>LiftDetailPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\LiftStatusPage.xaml.cs">
       <DependentUpon>LiftStatusPage.xaml</DependentUpon>
     </Compile>
@@ -77,10 +80,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HTTPService.cs" />
     <Compile Include="Services\LiftService.cs" />
+    <Compile Include="Services\NavigationService.cs" />
     <Compile Include="Services\RentalService.cs" />
     <Compile Include="Services\RestaurantsService.cs" />
     <Compile Include="Services\WeatherService.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\LiftDetailViewModel.cs" />
     <Compile Include="ViewModels\LiftStatusViewModel.cs" />
     <Compile Include="ViewModels\DiningViewModel.cs" />
     <Compile Include="ViewModels\RentalViewModel.cs" />
@@ -89,7 +95,6 @@
       <DependentUpon>DiningView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PriceLevelView.cs" />
-    <Compile Include="Views\RatingView.cs" />
     <Compile Include="Views\RentalView.xaml.cs">
       <DependentUpon>RentalView.xaml</DependentUpon>
     </Compile>
@@ -157,6 +162,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\DiningView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\LiftDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
