--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
@@ -146,6 +146,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\star_4.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\map.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
