Lift Detail map marker

--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\map.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\lift_map_marker.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
