--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
@@ -249,6 +249,9 @@
   <ItemGroup>
     <BundleResource Include="Resources\map.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\lift_map_marker.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
